test/typescript/openfl/errors/IOErrorTest.ts
import IOError from "openfl/errors/IOError";
var assert = chai.assert;


describe ("TypeScript | IOError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var ioError = new IOError ();
		assert.notEqual (ioError, null);
		
	});
	
	
});